--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
             properties.load(propertiesFile.newDataInputStream())
         }
 
-        resValue "string", "google_maps_key", properties.getProperty("GOOGLE_MAPS_API_KEY", "AIzaSyBVWpu2fya-T7OpNSuFheFxe32Nc_eXvVg")
+        resValue "string", "google_maps_key", properties.getProperty("GOOGLE_MAPS_API_KEY")
     }
 
     buildFeatures {
